--- a/menu.html
+++ b/menu.html
@@ -28,93 +28,183 @@
         <div class="container">
             <div class="product_items">
               <div class="product_items_image">
-                <img src="Dish3.avif" alt="Eror">
+                <img src="food1.jpg" alt="Error">
               </div>
                 <div class="product_item_image_description">
-                    <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
-                    <p>Lorem ipsum dolor sit amet. <br>Price 49.99 &euro; <span>99.99 &euro;</span></p> 
+                    <h2>Chicken curry with rice</h2>
+                    <p>a bowl of white basmati rice served with a generous portion of chicken curry</p> 
+                    <details><summary>More.</summary>
+                    <p>spiced tomato-based gravy. Garnished with a sprig of parsley.</p>
+                    </details><br>
+                    <p> Price 150 EG</p>
                     <br>
-                        <details><summary>More.</summary>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </details>
-                        <br><a href="#">BUY</a>
-                        <br><a href="#">Add in packet</a>
+                        <br><a href="#">Add in Cart</a>
                 </div>
             </div>
             <div class="product_items">
               <div class="product_items_image">
-                <img src="Dish3.avif" alt="Eror">
+                <img src="food2.jpeg" alt="Error">
               </div>  
               <div class="product_item_image_description">
-                <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
-                    <p>Lorem ipsum dolor sit amet. <br>Price 49.99 &euro; <span>99.99 &euro;</span></p>
+                <h2>Oven-Roased Chicked</h2>
+                    <p>A whole oven-roasted chicken, seasoned with herbs and spices.</p> 
+                    <details><summary>More.</summary>
+                    <p>with bread and three types of salad.</p>
+                    </details><br>
+                    <p> Price 300 EG</p>
                     <br>
-                        <details><summary>More.</summary>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </details>
-                        <br><a href="#">BUY</a>
-                        <br><a href="#">Add in packet</a>
+                        <br><a href="#">Add in Cart</a>
               </div>
             </div>
             <div class="product_items">
               <div class="product_items_image">
-                <img src="Dish3.avif" alt="Eror">
+                <img src="food3.jpeg" alt="Error">
               </div>
               <div class="product_item_image_description">
-                <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
-                    <p>Lorem ipsum dolor sit amet. <br>Price 49.99 &euro; <span>99.99 &euro;</span></p>
+                <h2>Chicken Shawrma</h2>
+                    <p>Shawarma wrap made with grilled chicken, wrapped in flatbread</p> 
+                    <details><summary>More.</summary>
+                    <p>served with crispy pita chips and garnishes like pickles and fresh herbs.</p>
+                    </details><br>
+                    <p> Price 100 EG</p>
                     <br>
-                        <details><summary>More.</summary>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </details>
-                        <br><a href="#">BUY</a>
-                        <br><a href="#">Add in packet</a>
-             </div>
+                        <br><a href="#">Add in Cart</a>
+              </div>
             </div>
             <div class="product_items">
               <div class="product_items_image">
-                <img src="Dish3.avif" alt="Eror">
+                <img src="food4.jpg" alt="Error">
               </div>
               <div class="product_item_image_description">
-                <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
-                    <p>Lorem ipsum dolor sit amet.<br>Price 49.99 &euro; <span>99.99 &euro;</span></p>
+                <h2>Meat Shawrma</h2>
+                    <p>Shawarma wrap made with grilled meat, wrapped in flatbread</p> 
+                    <details><summary>More.</summary>
+                    <p>served with crispy pita chips and garnishes like pickles and fresh herbs.</p>
+                    </details><br>
+                    <p> Price 100 EG</p>
                     <br>
-                        <details><summary>More.</summary>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </details>
-                        <br><a href="#">BUY</a>
-                        <br><a href="#">Add in packet</a>
-             </div>
+                        <br><a href="#">Add in Cart</a>
+              </div>
             </div>
             <div class="product_items">
               <div class="product_items_image">
-                <img src="Dish3.avif" alt="Eror">
+                <img src="food5.jpg" alt="Error">
               </div>
               <div class="product_item_image_description">
-                <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
-                    <p>Lorem ipsum dolor sit amet. <br>Price 49.99 &euro; <span>99.99 &euro;</span></p>
+                <h2>Beef Burger</h2>
+                    <p>A sesame seed bun burger with a beef patty, lettuce, onions, pickles</p> 
+                    <details><summary>More.</summary>
+                    <p>and possibly cheese or other toppings.</p>
+                    </details><br>
+                    <p> Price 125 EG</p>
                     <br>
-                        <details><summary>More.</summary>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </details>
-                        <br><a href="#">BUY</a>
-                        <br><a href="#">Add in packet</a>
+                        <br><a href="#">Add in Cart</a>
             </div>
             </div>
             <div class="product_items">
               <div class="product_items_image">
-                <img src="Dish3.avif" alt="Eror">
+                <img src="food6.jpg" alt="Error">
             </div>
               <div class="product_item_image_description">
-                <h2>item name Lorem ipsum dolor sit amet consectetur.</h2>
-                    <p>Lorem ipsum dolor sit amet. <br>Price 49.99 &euro; <span>99.99 &euro;</span></p>
+                <h2>Barbecue Chicken Pizza</h2>
+                    <p>A pizza topped with barbecue sauce, grilled chicken chunks, red onions</p> 
+                    <details><summary>More.</summary>
+                    <p>and melted cheese on a thick crust.</p>
+                    </details><br>
+                    <p> Price 150 EG</p>
                     <br>
-                        <details><summary>More.</summary>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        </details>
-                        <br><a href="#">BUY</a>
-                        <br><a href="#">Add in packet</a>
-             </div>
+                        <br><a href="#">Add in Cart</a>
+              </div>
+            </div>
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="food7.jpg" alt="Error">
+            </div>
+              <div class="product_item_image_description">
+                <h2>Chicken Burger</h2>
+                    <p>A sesame seed bun packed with crispy fried chicken fillet, cheddar cheese, fresh lettuce</p> 
+                    <details><summary>More.</summary>
+                    <p>, red onions, tomato slices, and extra greensy.</p>
+                    </details><br>
+                    <p> Price 110 EG</p>
+                    <br>
+                        <br><a href="#">Add in Cart</a>
+              </div>
+            </div>
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="food8.jpg" alt="Error">
+            </div>
+              <div class="product_item_image_description">
+                <h2>Kofta</h2>
+                    <p>Juicy ground meat skewers, grilled and garnished with fresh herbs</p> 
+                    <details><summary>More.</summary>
+                    <p>surrounded by grilled red peppers and onions.</p>
+                    </details><br>
+                    <p> Price 150 EG</p>
+                    <br>
+                        <br><a href="#">Add in Cart</a>
+              </div>
+            </div>
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="food9.jpg" alt="Error">
+            </div>
+              <div class="product_item_image_description">
+                <h2>Red Sauce Pasta</h2>
+                    <p>A classic Italian pasta dish made with penne noodles, coated in rich tomato sauce</p> 
+                    <details><summary>More.</summary>
+                    <p>topped with grated Parmesan cheese and fresh basil.</p>
+                    </details><br>
+                    <p> Price 80 EG</p>
+                    <br>
+                        <br><a href="#">Add in Cart</a>
+              </div>
+            </div>
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="food10.jpg" alt="Error">
+            </div>
+              <div class="product_item_image_description">
+                <h2>White Sauce Pasta</h2>
+                    <p>A classic Italian pasta dish made with penne noodles, coated in rich Alfredo sauce</p> 
+                    <details><summary>More.</summary>
+                    <p>Alfredo sauce made from rich cream, butter, and melted Parmesan cheese.</p>
+                    </details><br>
+                    <p> Price 80 EG</p>
+                    <br>
+                        <br><a href="#">Add in Cart</a>
+              </div>
+            </div>
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="food11.jpg" alt="Error">
+            </div>
+              <div class="product_item_image_description">
+                <h2>Meat Kabab</h2>
+                    <p>Grilled beef chunks served on rosemary sprigs as skewers, seasoned </p> 
+                    <details><summary>More.</summary>
+                    <p>with coarse salt and black pepper.</p>
+                    </details><br>
+                    <p> Price 150 EG</p>
+                    <br>
+                        <br><a href="#">Add in Cart</a>
+              </div>
+            </div>
+            <div class="product_items">
+              <div class="product_items_image">
+                <img src="food12.jpg" alt="Error">
+            </div>
+              <div class="product_item_image_description">
+                <h2>Chicken Kabab</h2>
+                    <p>Skewers of grilled chicken breast cubes alternated with colorful bell peppers</p> 
+                    <details><summary>More.</summary>
+                    <p>, served with fresh herbs, lemon wedges, and dipping sauce.</p>
+                    </details><br>
+                    <p> Price 150 EG</p>
+                    <br>
+                        <br><a href="#">Add in Cart</a>
+              </div>
             </div>
         </div>
     </section>  
