--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="HomePage.html">HOME</a></li>
                 <li><a href="menu.html">MENU</a></li>
-                <li><a href="Cart.html">CART</a></li>    
+                <li><a href="Cart.html">CART <span class="cart-counter">0</span></a></li>      
                 <li><a href="about.html">ABOUT US</a></li> 
                 <li><a href="ContactUS.html">CONTACT US</a></li>     
                 <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
@@ -56,3 +56,6 @@
         </div>
 
     </div>
+    <script src="menu.js"></script>
+</body>
+</html>
