--- a/ContactUS.html
+++ b/ContactUS.html
@@ -14,8 +14,8 @@
                 <div class="logo"><a href="HomePage.html">Dream resturant</a></div> <!-- logo -->
                 <ul>
                     <li><a href="HomePage.html">HOME</a></li>
-                    <li><a href="#">MENU</a></li>
-                    <li><a href="#">PROFILE</a></li>    
+                    <li><a href="menu.html">MENU</a></li>
+                    <li><a href="Cart.html">CART <span class="cart-counter">0</span></a></li>   
                     <li><a href="about.html">ABOUT US</a></li> 
                     <li><a href="ContactUS.html">CONTACT US</a></li>     
                     <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
@@ -71,5 +71,6 @@
     </form>
     <div class="space">-</div>
     <script src="contact.js"></script>
+    <script src="menu.js"></script>
 </body>
 </html>
