--- a/sign-up.html
+++ b/sign-up.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="HomePage.html">HOME</a></li>
                     <li><a href="menu.html">MENU</a></li>
-                    <li><a href="Cart.html">CART</a></li>    
+                    <li><a href="Cart.html">CART <span class="cart-counter">0</span></a></li>     
                     <li><a href="about.html">ABOUT US</a></li> 
                     <li><a href="ContactUS.html">CONTACT US</a></li>     
                     <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
@@ -81,5 +81,6 @@
         </div>
     </div>
     <script src="sign-up.js"></script>
+    <script src="menu.js"></script>
     </body>
 </html>
