--- a/Cart.html
+++ b/Cart.html
@@ -41,7 +41,7 @@
                 <h3>Order Details</h3>
                 <div class="summary-row">
                     <span>Subtotal:</span>
-                    <span class="price">$90.00</span>
+                    <span class="subtotal-price">$0.00</span>
                 </div>
                 <div class="summary-row">
                     <span>Delivery:</span>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="summary-row total">
                     <span>Total:</span>
-                    <span class="price">$90.00</span>
+                    <span class="total-price">$0.00</span>
                 </div>
                 <div class="delivery-info">
                     <i class="fas fa-clock"></i>
