--- a/menu.html
+++ b/menu.html
@@ -12,11 +12,17 @@
         <header class="navdiv">
             <div class="logo"><a href="HomePage.html">Dream resturant</a></div> <!-- logo -->
             <ul>
-                <li><a href="HomePage.html">HOME</a></li>
-                <li><a href="menu.html">MENU</a></li>
-                <li><a href="Cart.html">CART <span class="cart-counter">0</span></a></li>      
-                <li><a href="about.html">ABOUT US</a></li> 
-                <li><a href="ContactUS.html">CONTACT US</a></li>     
+              <li><a href="HomePage.html">HOME</a></li>
+              <li><a href="menu.html">MENU</a></li>
+              <li><a href="Cart.html">CART <span class="cart-counter">0</span></a></li>      
+              <li><a href="about.html">ABOUT US</a></li> 
+              <li><a href="ContactUS.html">CONTACT US</a></li>     
+              <li class="search-container">
+                  <input type="text" placeholder="Search menu..." class="search-input">
+                  <button class="search-btn">
+                      <i class="fas fa-search"></i>
+                  </button>
+              </li>
                 <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
                 <button class="button_login"><a href="log.html">log-in</a></button>  
             </ul>
@@ -38,7 +44,8 @@
                     </details><br>
                     <p> Price 150 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+
                 </div>
             </div>
             <div class="product_items">
@@ -53,7 +60,8 @@
                     </details><br>
                     <p> Price 300 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+
               </div>
             </div>
             <div class="product_items">
@@ -68,7 +76,8 @@
                     </details><br>
                     <p> Price 100 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+
               </div>
             </div>
             <div class="product_items">
@@ -83,7 +92,8 @@
                     </details><br>
                     <p> Price 100 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+
               </div>
             </div>
             <div class="product_items">
@@ -98,7 +108,8 @@
                     </details><br>
                     <p> Price 125 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+
             </div>
             </div>
             <div class="product_items">
@@ -113,7 +124,8 @@
                     </details><br>
                     <p> Price 150 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+
               </div>
             </div>
             <div class="product_items">
@@ -128,7 +140,8 @@
                     </details><br>
                     <p> Price 110 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+
               </div>
             </div>
             <div class="product_items">
@@ -143,7 +156,8 @@
                     </details><br>
                     <p> Price 150 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+
               </div>
             </div>
             <div class="product_items">
@@ -158,7 +172,8 @@
                     </details><br>
                     <p> Price 80 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+
               </div>
             </div>
             <div class="product_items">
@@ -173,7 +188,8 @@
                     </details><br>
                     <p> Price 80 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+
               </div>
             </div>
             <div class="product_items">
@@ -188,7 +204,7 @@
                     </details><br>
                     <p> Price 500 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
               </div>
             </div>
             <div class="product_items">
@@ -203,7 +219,7 @@
                     </details><br>
                     <p> Price 500 EG</p>
                     <br>
-                        <br><a href="#">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
               </div>
             </div>
         </div>
