--- a/sign-up.html
+++ b/sign-up.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="discription" content="best and virit delshous food">
         <link rel="stylesheet" href="sign-up.css">
-        <title>Dream Resturant</title>
+        <title>SignUp</title>
     </head>
     <body>
         <div class="background">
