--- a/menu.html
+++ b/menu.html
@@ -44,8 +44,14 @@
                     </details><br>
                     <p> Price 150 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
-
+                    <br>
+                    <a href="#" class="add-to-cart-btn" 
+                      data-id="1" 
+                      data-name="Chicken curry with rice" 
+                      data-price="150" 
+                      data-image="food1.jpg">
+                      Add to Cart
+                    </a>
                 </div>
             </div>
             <div class="product_items">
@@ -60,7 +66,13 @@
                     </details><br>
                     <p> Price 300 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn" 
+                      data-id="2" 
+                      data-name="Oven-Roased Chicked" 
+                      data-price="300" 
+                      data-image="food2.jpg">
+                      Add to Cart
+                    </a>
 
               </div>
             </div>
@@ -76,7 +88,13 @@
                     </details><br>
                     <p> Price 100 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn" 
+                      data-id="3" 
+                      data-name="Chicken Shawrma" 
+                      data-price="100" 
+                      data-image="food3.jpg">
+                      Add to Cart
+                    </a>
 
               </div>
             </div>
@@ -92,7 +110,13 @@
                     </details><br>
                     <p> Price 100 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn" 
+                      data-id="4" 
+                      data-name="Chicken curry with rice" 
+                      data-price="100" 
+                      data-image="food4.jpg">
+                      Add to Cart
+                    </a>
 
               </div>
             </div>
@@ -108,7 +132,13 @@
                     </details><br>
                     <p> Price 125 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn" 
+                      data-id="5" 
+                      data-name="Beef Burger" 
+                      data-price="125" 
+                      data-image="food5.jpg">
+                      Add to Cart
+                    </a>
 
             </div>
             </div>
@@ -124,7 +154,13 @@
                     </details><br>
                     <p> Price 150 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn" 
+                      data-id="6" 
+                      data-name="Barbecue Chicken Pizza" 
+                      data-price="150" 
+                      data-image="food6.jpg">
+                      Add to Cart
+                    </a>
 
               </div>
             </div>
@@ -140,7 +176,13 @@
                     </details><br>
                     <p> Price 110 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn" 
+                      data-id="7" 
+                      data-name="Chicken Burger" 
+                      data-price="110" 
+                      data-image="food7.jpg">
+                      Add to Cart
+                    </a>
 
               </div>
             </div>
@@ -156,7 +198,13 @@
                     </details><br>
                     <p> Price 150 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn" 
+                      data-id="8" 
+                      data-name="Kofta" 
+                      data-price="150" 
+                      data-image="food8.jpg">
+                      Add to Cart
+                    </a>
 
               </div>
             </div>
@@ -172,7 +220,13 @@
                     </details><br>
                     <p> Price 80 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn" 
+                      data-id="9" 
+                      data-name="Red Sauce Pasta" 
+                      data-price="80" 
+                      data-image="food9.jpg">
+                      Add to Cart
+                    </a>
 
               </div>
             </div>
@@ -188,7 +242,13 @@
                     </details><br>
                     <p> Price 80 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn" 
+                      data-id="10" 
+                      data-name="White Sauce Pasta" 
+                      data-price="80" 
+                      data-image="food10.jpg">
+                      Add to Cart
+                    </a>
 
               </div>
             </div>
@@ -204,7 +264,13 @@
                     </details><br>
                     <p> Price 500 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn" 
+                      data-id="11" 
+                      data-name="Meat Kabab" 
+                      data-price="500" 
+                      data-image="food11.jpg">
+                      Add to Cart
+                    </a>
               </div>
             </div>
             <div class="product_items">
@@ -219,7 +285,13 @@
                     </details><br>
                     <p> Price 500 EG</p>
                     <br>
-                    <br><a href="#" class="add-to-cart-btn">Add in Cart</a>
+                    <br><a href="#" class="add-to-cart-btn" 
+                      data-id="12" 
+                      data-name="Chicken Kabab" 
+                      data-price="500" 
+                      data-image="food12.jpg">
+                      Add to Cart
+                    </a>
               </div>
             </div>
         </div>
