--- a/menu.html
+++ b/menu.html
@@ -56,7 +56,7 @@
             </div>
             <div class="product_items">
               <div class="product_items_image">
-                <img src="food2.jpeg" alt="Error">
+                <img src="food2.jpg" alt="Error">
               </div>  
               <div class="product_item_image_description">
                 <h2>Oven-Roased Chicked</h2>
@@ -78,7 +78,7 @@
             </div>
             <div class="product_items">
               <div class="product_items_image">
-                <img src="food3.jpeg" alt="Error">
+                <img src="food3.jpg" alt="Error">
               </div>
               <div class="product_item_image_description">
                 <h2>Chicken Shawrma</h2>
