--- a/HomePage.html
+++ b/HomePage.html
@@ -24,7 +24,7 @@
                 <li><a href="about.html">ABOUT US</a></li> 
                 <li><a href="ContactUS.html">CONTACT US</a></li>     
                 <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
-                <button class="button_login"><a href="log.html">log-in</a></button>  
+                <button class="button_product"><a href="log.html">log-in</a></button>  
             </ul>
         </header>
     </nav>
