--- a/HomePage.html
+++ b/HomePage.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="resturant" content="home page">
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+RO:wght@100..400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+RO:wght@100..400&display=swap"
+        rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+RO:wght@100..400&family=Varela+Round&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+RO:wght@100..400&family=Varela+Round&display=swap"
+        rel="stylesheet">
     <title>Home Page</title>
 </head>
+
 <body>
 
     <nav class="navbar">
@@ -20,15 +26,15 @@
             <ul>
                 <li><a href="HomePage.html">HOME</a></li>
                 <li><a href="menu.html">MENU</a></li>
-                <li><a href="Cart.html">CART <span class="cart-counter">0</span></a></li>       
-                <li><a href="about.html">ABOUT US</a></li> 
-                <li><a href="ContactUS.html">CONTACT US</a></li>     
-                <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>  
-                <button class="button_product"><a href="log.html">log-in</a></button>  
+                <li><a href="Cart.html">CART <span class="cart-counter">0</span></a></li>
+                <li><a href="about.html">ABOUT US</a></li>
+                <li><a href="ContactUS.html">CONTACT US</a></li>
+                <button class="button_signUp"><a href="sign-up.html">sign-up</a></button>
+                <button class="button_login"><a href="log.html">log-in</a></button>
             </ul>
         </header>
     </nav>
-    
+
     <div class="home">
         <div class="open_lay">
             <div class="container">
@@ -36,10 +42,10 @@
                     <div class="name">
                         <h1>Dream resturant</h1>
                     </div><!-- name -->
-                        <h4>Enjoy our delicious food </h4>
-                        <p>welcome to Dream resturant, Did you like food and want to try it ?</p>
+                    <h4>Enjoy our delicious food </h4>
+                    <p>welcome to Dream resturant, Did you like food and want to try it ?</p>
                     <div class="buttons"> <!--Buttons-->
-                        <button class="button_login"><a href="#">Products</a></button>  
+                        <button class="button_product"><a href="#">Products</a></button>
                     </div><!--Buttons-->
                 </div>
             </div>
@@ -48,6 +54,6 @@
     </div>
     <script src="main.js"></script>
     <script src="menu.js"></script>
-</body>    
+</body>
+
 </html>
-        
