--- a/HomePage.html
+++ b/HomePage.html
@@ -45,7 +45,7 @@
                     <h4>Enjoy our delicious food </h4>
                     <p>welcome to Dream resturant, Did you like food and want to try it ?</p>
                     <div class="buttons"> <!--Buttons-->
-                        <button class="button_product"><a href="#">Products</a></button>
+                        <button class="button_product"><a href="menu.html">Products</a></button>
                     </div><!--Buttons-->
                 </div>
             </div>
