--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
               <li><a href="about.html">ABOUT US</a></li> 
               <li><a href="ContactUS.html">CONTACT US</a></li>     
               <li class="search-container">
-                  <input type="text" placeholder="Search menu..." class="search-input">
+                  <input type="text" id="searchBar" placeholder="Search menu...">
                   <button class="search-btn">
                       <i class="fas fa-search"></i>
                   </button>
