--- a/HomePage.html
+++ b/HomePage.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="resturant" content="home page">
+    <meta name="discription" content="best and virit delicious food">
     <link rel="stylesheet" href="main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
