--- a/sign-up.html
+++ b/sign-up.html
@@ -2,9 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <meta name="discription" content="best and virit delshous food">
         <link rel="stylesheet" href="sign-up.css">
         <title>SignUp</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+RO:wght@100..400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+RO:wght@100..400&family=Varela+Round&display=swap" rel="stylesheet">
+    
     </head>
     <body>
         <div class="background">
