--- a/HomePage.html
+++ b/HomePage.html
@@ -50,9 +50,9 @@
                     </div><!--Buttons-->
                 </div>
             </div>
-
         </div>
     </div>
+    <video src="Dream Resturant.mp4" controls autoplay loop muted></video>
     <script src="main.js"></script>
     <script src="menu.js"></script>
 </body>
