--- a/HomePage.html
+++ b/HomePage.html
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <video src="Dream Resturant.mp4" controls autoplay loop muted></video>
+    <video src="Dream Resturant.mp4"  autoplay loop muted></video>
     <script src="main.js"></script>
     <script src="menu.js"></script>
 </body>
