--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="resturant" content="home page">
+    <meta name="resturant" content="About Us">
     <meta name="viewport" content="width= device - width , initial - scale = 1.0">
     <link rel="stylesheet" href="about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,13 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playwrite+RO:wght@100..400&family=Varela+Round&display=swap" rel="stylesheet">
-    <title>about US</title>
+    <title>About Us</title>
 </head>
 <body>
 
     <nav class="navbar">
         <header class="navdiv">
-            <div class="logo"><a href="HomePage.html">Dream resturant</a></div> logo 
+            <div class="logo"><a href="HomePage.html">Dream resturant</a></div> 
             <ul>
                 <li><a href="HomePage.html">HOME</a></li>
                 <li><a href="menu.html">MENU</a></li>
