--- a/about.html
+++ b/about.html
@@ -35,26 +35,23 @@
             <div class="container">
                 <div class="descr">
                     <div class="name">
-                        <h1>About us</h1>
+                        <h1>About Us</h1>
                     </div> 
                         <h4> We are a team of eight people who decided to create this page as our first step toward success.
-                            We wanted to start by opening a modest restaurant to meet people's needs. </h4>
-                            <h5>Team members:</h5>
-                            <ul>
-                            <li>Abdallah Mohamed Essam</li><br>
-                            <li>Ahmed Ayman Samhan</li><br>
-                            <li>Abdallah Yehia Raheem</li><br>
-                            <li>Osama Hasan Gad Elkarem</li><br>
-                            <li>Ahmed Amer Amer</li><br>
-                            <li>Mohamed Hussein Mohamed</li><br>
-                            <li>Omar Tamer Mohamed</li><br>
-                            <li>Mostafa Hamed Kamel</li><br>
-                            
+                        We wanted to start by opening a modest restaurant to meet people's needs. </h4>
+                        <h5>Team members:</h5>
+                        <ul>
+                        <li>Abdallah Mohamed Essam</li><br>
+                        <li>Ahmed Ayman Samhan</li><br>
+                        <li>Abdallah Yehia Raheem</li><br>
+                        <li>Osama Hasan Gad Elkarem</li><br>
+                        <li>Ahmed Amer Amer</li><br>
+                        <li>Mohamed Hussein Mohamed</li><br>
+                        <li>Omar Tamer Mohamed</li><br>
+                        <li>Mostafa Hamed Kamel</li><br>
                 </div>
             </div>
-
         </div>
-
     </div>
     <script src="menu.js"></script>
 </body>
