--- a/menu.html
+++ b/menu.html
@@ -67,7 +67,7 @@
                 <img src="food2.jpg" alt="Error">
               </div>  
               <div class="product_item_image_description">
-                <h2>Oven-Roased Chicked</h2>
+                <h2>Oven-Roasted Chicked</h2>
                     <p>A whole oven-roasted chicken, seasoned with herbs and spices.</p> 
                     <details><summary>More.</summary>
                     <p>with bread and three types of salad.</p>
